[gd_scene load_steps=12 format=2]

[ext_resource path="res://MenuUI/Main/main.gd" type="Script" id=1]
[ext_resource path="res://MenuUI/Main/Title.png" type="Texture" id=2]
[ext_resource path="res://MenuUI/magic_button.tscn" type="PackedScene" id=3]
[ext_resource path="res://MenuUI/Main/button.png" type="Texture" id=4]
[ext_resource path="res://MenuUI/Main/button_pressed.png" type="Texture" id=5]
[ext_resource path="res://MenuUI/Main/button_hover.png" type="Texture" id=6]
[ext_resource path="res://MenuUI/Characterselection/character_selection.tscn" type="PackedScene" id=7]
[ext_resource path="res://MenuUI/UI Particel/hover_effect.tscn" type="PackedScene" id=8]
[ext_resource path="res://dynamic_risque.tres" type="DynamicFont" id=9]
[ext_resource path="res://MenuUI/Options/options.tscn" type="PackedScene" id=10]
[ext_resource path="res://MenuUI/Credits/credits.tscn" type="PackedScene" id=11]

[node name="Main" type="CenterContainer" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 1.0
anchor_bottom = 1.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
use_top_left = false
script = ExtResource( 1 )
_sections_unfolded = [ "Anchor", "Margin", "Transform" ]
path_to_own_template = "res://MenuUI/Main/main.tscn"

[node name="Content" type="VBoxContainer" parent="." index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 710.0
margin_top = 195.0
margin_right = 1210.0
margin_bottom = 885.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
alignment = 0
_sections_unfolded = [ "Margin" ]

[node name="title" type="TextureRect" parent="Content" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 500.0
margin_bottom = 411.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
texture = ExtResource( 2 )
stretch_mode = 0

[node name="C1" type="CenterContainer" parent="Content" index="1"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 415.0
margin_right = 500.0
margin_bottom = 690.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
use_top_left = false

[node name="Buttons" type="VBoxContainer" parent="Content/C1" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 150.0
margin_right = 350.0
margin_bottom = 275.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
custom_constants/separation = -3
alignment = 1
_sections_unfolded = [ "Anchor", "Margin", "Rect", "custom_constants" ]

[node name="Start" parent="Content/C1/Buttons" index="0" instance=ExtResource( 3 )]

margin_right = 200.0
margin_bottom = 71.0
focus_neighbour_top = NodePath("../Quit")
focus_neighbour_bottom = NodePath("../Options")
texture_normal = ExtResource( 4 )
texture_pressed = ExtResource( 5 )
texture_hover = ExtResource( 6 )
_sections_unfolded = [ "Focus", "Rect", "Textures" ]
next_scene = ExtResource( 7 )
particle_template = ExtResource( 8 )

[node name="Label" type="Label" parent="Content/C1/Buttons/Start" index="0"]

anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -100.0
margin_top = -23.0
margin_right = 100.0
margin_bottom = 23.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
custom_fonts/font = ExtResource( 9 )
custom_colors/font_color = Color( 0.0980392, 0.298039, 0.345098, 1 )
text = "START"
align = 1
valign = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "Anchor", "Margin", "Material", "Visibility", "custom_colors", "custom_constants", "custom_fonts" ]

[node name="Options" parent="Content/C1/Buttons" index="1" instance=ExtResource( 3 )]

margin_top = 68.0
margin_right = 200.0
margin_bottom = 139.0
focus_neighbour_top = NodePath("../Start")
focus_neighbour_bottom = NodePath("../Credits")
texture_normal = ExtResource( 4 )
texture_pressed = ExtResource( 5 )
texture_hover = ExtResource( 6 )
_sections_unfolded = [ "Focus", "Textures" ]
next_scene = ExtResource( 10 )
particle_template = ExtResource( 8 )

[node name="Label" type="Label" parent="Content/C1/Buttons/Options" index="0"]

anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -87.0
margin_top = -30.0
margin_right = 87.0
margin_bottom = 30.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
custom_fonts/font = ExtResource( 9 )
custom_colors/font_color = Color( 0.0980392, 0.298039, 0.345098, 1 )
text = "Options"
align = 1
valign = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "Margin", "custom_colors", "custom_fonts" ]

[node name="Credits" parent="Content/C1/Buttons" index="2" instance=ExtResource( 3 )]

margin_top = 136.0
margin_right = 200.0
margin_bottom = 207.0
focus_neighbour_top = NodePath("../Options")
focus_neighbour_bottom = NodePath("../Quit")
texture_normal = ExtResource( 4 )
texture_pressed = ExtResource( 5 )
texture_hover = ExtResource( 6 )
_sections_unfolded = [ "Focus", "Textures" ]
next_scene = ExtResource( 11 )
particle_template = ExtResource( 8 )

[node name="Label" type="Label" parent="Content/C1/Buttons/Credits" index="0"]

anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -79.5
margin_top = -30.0
margin_right = 79.5
margin_bottom = 30.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
custom_fonts/font = ExtResource( 9 )
custom_colors/font_color = Color( 0.0980392, 0.298039, 0.345098, 1 )
text = "Credits"
align = 1
valign = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "Margin", "custom_colors", "custom_fonts" ]

[node name="Quit" parent="Content/C1/Buttons" index="3" instance=ExtResource( 3 )]

margin_top = 204.0
margin_right = 200.0
margin_bottom = 275.0
focus_neighbour_top = NodePath("../Credits")
focus_neighbour_bottom = NodePath("../Start")
texture_normal = ExtResource( 4 )
texture_pressed = ExtResource( 5 )
texture_hover = ExtResource( 6 )
_sections_unfolded = [ "Focus", "Textures" ]
particle_template = ExtResource( 8 )

[node name="Label" type="Label" parent="Content/C1/Buttons/Quit" index="0"]

anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -48.0
margin_top = -30.0
margin_right = 48.0
margin_bottom = 30.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
custom_fonts/font = ExtResource( 9 )
custom_colors/font_color = Color( 0.0980392, 0.298039, 0.345098, 1 )
text = "Quit"
align = 1
valign = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "Margin", "custom_colors", "custom_fonts" ]

[connection signal="pressed" from="Content/C1/Buttons/Start" to="." method="_on_Start_pressed"]

[connection signal="pressed" from="Content/C1/Buttons/Options" to="." method="_on_Options_pressed"]

[connection signal="pressed" from="Content/C1/Buttons/Credits" to="." method="_on_Credits_pressed"]

[connection signal="pressed" from="Content/C1/Buttons/Quit" to="." method="_on_Quit_pressed"]


